--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "version": "1.0.0",
   "author": "Baobab Koodaa <npm1232983x@baobab.fi>",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "es6-promise": "^4.2.6",
     "gatsby": "^2.1.19",
     "gatsby-image": "^2.0.30",
     "gatsby-plugin-manifest": "^2.0.20",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.7",
-    "gatsby-plugin-sharp": "^2.2.22",
+    "gatsby-plugin-sharp": "^2.0.5",
     "gatsby-plugin-styled-jsx": "^3.0.4",
     "gatsby-plugin-styled-jsx-postcss": "^2.0.2",
     "gatsby-plugin-typescript": "^2.0.10",
+    "gatsby-source-contentful": "^2.1.36",
     "gatsby-source-filesystem": "^2.0.23",
-    "gatsby-transformer-sharp": "^2.1.15",
+    "gatsby-transformer-sharp": "^2.1.1",
     "lodash.throttle": "^4.1.1",
     "node-fetch": "^2.3.0",
     "postcss-nested": "^4.1.2",
